<resources>
    <string name="app_name">Pepper Diagnostics</string>
    <string name="main_activity_name">Transmission Temperature</string>
    <string name="measurement_activity_name">Advanced Measurements</string>
    <string name="dtc_activity_name">Trouble Codes</string>
    <string name="not_connected_label">Not Connected</string>
    <string name="transmission_temperature_label">Transmission Temperature</string>
    <string name="part_number_label">Part Number</string>
    <string name="action_settings">Settings</string>
    <string name="connectionLabel">Connect</string>
    <string name="disconnectionLabel">Disconnect</string>
    <string name="group_selector_label">Group</string>
    <string name="init_address_label">KWP Init Address</string>
    <string name="controller_address_label">KWP Controller Address</string>
    <string name="action_measurements">Measurements</string>
    <string name="pick_bluetooth">Select ELM327</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="fetch_codes">Fetch Codes</string>
    <string name="fetching_codes">Fetching Codes...</string>
    <string name="action_dtcs">Trouble Codes</string>
    <string name="reset_cluster_label">Reset Cluster</string>
    <string name="action_clear">Clear DTCs</string>
</resources>
