<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.brianledbetter.kwplogger.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="N/A"
        android:id="@+id/valueValue"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/valueFontSize" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/transmission_temperature_label"
        android:id="@+id/temperatureLabel"
        android:layout_above="@+id/valueValue"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="N/A"
        android:id="@+id/valueLabel"
        android:layout_below="@+id/valueValue"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_connected_label"
        android:id="@+id/partNumber"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/part_number_label"
        android:id="@+id/partNumberLabel"
        android:layout_above="@+id/partNumber"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connectionLabel"
        android:id="@+id/connectionToggle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textOff="@string/connectionLabel"
        android:textOn="@string/disconnectionLabel" />

</RelativeLayout>
