<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numberPicker"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="16"
        android:id="@+id/controllerAddress"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:editable="true"
        android:inputType="number" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/initAddress"
        android:layout_above="@+id/controllerAddress"
        android:layout_alignParentEnd="true"
        android:text="1"
        android:editable="true"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/controller_address_label"
        android:id="@+id/textView3"
        android:paddingEnd="10dp"
        android:labelFor="@id/controllerAddress"
        android:layout_alignTop="@+id/controllerAddress"
        android:layout_toEndOf="@+id/numberPicker" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/init_address_label"
        android:id="@+id/textView4"
        android:paddingEnd="10dp"
        android:labelFor="@id/initAddress"
        android:layout_alignTop="@+id/initAddress"
        android:layout_toEndOf="@+id/numberPicker" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/group_selector_label"
        android:id="@+id/textView5"
        android:layout_above="@+id/numberPicker"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/not_connected_label"
        android:id="@+id/value1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/not_connected_label"
        android:id="@+id/label1"
        android:layout_below="@+id/value1"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/not_connected_label"
        android:id="@+id/value2"
        android:layout_below="@+id/label1"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/not_connected_label"
        android:id="@+id/label2"
        android:layout_below="@+id/value2"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/not_connected_label"
        android:id="@+id/value3"
        android:layout_below="@+id/label2"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/not_connected_label"
        android:id="@+id/label3"
        android:layout_below="@+id/value3"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/not_connected_label"
        android:id="@+id/value4"
        android:layout_below="@+id/label3"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/not_connected_label"
        android:id="@+id/label4"
        android:layout_below="@+id/value4"
        android:layout_alignParentStart="true" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New ToggleButton"
        android:id="@+id/connectionToggle"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignParentEnd="true"
        android:textOff="@string/connectionLabel"
        android:textOn="@string/disconnectionLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/not_connected_label"
        android:id="@+id/partNumber"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>